--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
-DB_USER=factory_user # e.g., root or factory_user
+DB_USER=factory_user
 DB_PASSWORD=password
 DB_NAME=quality
 JWT_SECRET_KEY=a_secret_key_for_development
